# bankbuddy

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  bank_buddy_spec.md  base_manifest.yaml  pyproject.toml  skills.md
.ai-context/: ARCHITECTURE.md  COMMANDS.md  DECISIONS.md  INDEX.md  PROJECT.md  README.md  STATUS.md  WORKFLOWS.md
.base/: activate.sh
.github/: base-project.yml  pull_request_template.md
.github/workflows/: project-intake.yml  tests.yml
docs/: assetbuddy_design.md  financial_intelligence_architecture.md  financial_intelligence_architecture_review.md  financial_intelligence_architecture_spec.md  financial_intelligence_open_questions.md  financial_intelligence_vision.md
src/bankbuddy/: __init__.py  account_refs.py  accounts.py  audit.py  categories.py  cli.py  currency.py  database.py  duplicate_diagnostics.py  exports.py  imports.py  (+11 more)
tests/: test_accounts.py  test_audit.py  test_audit_cli.py  test_base_activation.py  test_bb_cli.py  test_bb_documents_cli.py  test_bb_foundation.py  test_bb_storage.py  test_categories.py  test_cli.py  test_currency.py  test_database.py  test_duplicate_diagnostics.py  test_export_cli.py  test_exports.py  test_financial_foundation.py  test_financial_storage.py  test_import_cli.py  test_import_files.py  test_import_history.py  test_imports.py  test_inbox.py  test_packaging.py  test_paths.py  test_repairs.py  test_report_cli.py  test_reports.py  test_statements.py  test_statements_cli.py  test_storage_layout.py  test_tax_cli.py  test_tax_documents.py  test_transactions.py  test_tx_cli.py  validate.sh
(+45 files in other folders)
