[project]
name = "bankbuddy"
version = "0.1.0"
description = "Local-first personal finance tracking."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "click>=8.1,<9",
  "pdfplumber>=0.11,<0.12",
  "PyYAML>=6,<7",
]

[project.scripts]
bank-buddy = "bankbuddy.cli:main"

[dependency-groups]
dev = [
  "pytest>=8,<9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bankbuddy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
